# libsmatrix

./: .gitignore  CMakeLists.txt  Makefile  Makefile.in  Makefile.old  README.md  libsmatrix.gemspec  pom.xml
com/paulasmuth/libsmatrix/libsmatrix/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1
com/paulasmuth/libsmatrix/libsmatrix/0.1-SNAPSHOT/: libsmatrix-0.1-20131201.163127-1.jar.md5  libsmatrix-0.1-20131201.163127-1.jar.sha1  libsmatrix-0.1-20131201.163127-1.pom  libsmatrix-0.1-20131201.163127-1.pom.md5  libsmatrix-0.1-20131201.163127-1.pom.sha1  libsmatrix-0.1-20131201.163414-2.jar.md5  libsmatrix-0.1-20131201.163414-2.jar.sha1  libsmatrix-0.1-20131201.163414-2.pom  libsmatrix-0.1-20131201.163414-2.pom.md5  libsmatrix-0.1-20131201.163414-2.pom.sha1  libsmatrix-0.1-20131201.163624-3.jar.sha1  libsmatrix-0.1-20131201.163640-4.jar.md5  maven-metadata.xml  (+17 more)
examples/: CFRecommender.java  cf_recommender.c
src/: .gitignore  CMakeLists.txt  Makefile  Makefile.in  Test.java  cf.c  cf.h  conn.c  conn.h  example_recommender.c  http.c  http.h  marshal.c  marshal.h  recommendify  recommendify.c  recommendify.h  smatrix.c  smatrix.h  smatrix_benchmark.c  smatrix_example  smatrix_example.c  smatrix_jni.c  smatrix_jni.h  smatrix_private.h  smatrix_ruby.c  smatrix_ruby.h  version.h
src/com/paulasmuth/libsmatrix/: SparseMatrix.java
src/java/: Makefile  pom.xml
src/java/com/paulasmuth/libsmatrix/: SparseMatrix.java
src/java/test/: Test.java  TestSparseMatrix.java
src/ruby/: Makefile  Makefile.in  extconf.rb  libsmatrix.gemspec  libsmatrix.rb
(+15 files in other folders)
